--- a/css/portfulio.css
+++ b/css/portfulio.css
@@ -156,5 +156,8 @@ main{
     font-weight: 400;
     font-size: 20px;
     color: #474747;
-
+}
+/* what i do  */
+.What-i-do{
+    margin-top: 130px;
 }
