--- a/css/portfulio.css
+++ b/css/portfulio.css
@@ -130,7 +130,7 @@ main{
     color: #757575;
 }
 .section-title{
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
     line-height: 48px;
@@ -160,4 +160,136 @@ main{
 /* what i do  */
 .What-i-do{
     margin-top: 130px;
+}
+.section-description-2{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    /* or 167% */
+
+    text-align: center;
+
+    /* Dark 03 */
+
+    color: #757575;
+    margin-bottom: 150px;
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(37, 35, 35, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}    
+
+.skill-img{
+    width: 44px;
+    height: 44px;
+}
+.skill-title{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    
+
+    padding-top: 30px;
+
+    /* Dark 01 */
+
+    color: #181818;
+    }
+
+.skill-description{
+        font-weight: 400;
+        font-size: 16px;
+
+        padding-top: 20px;
+        /* Dark 03 */
+
+        color: #757575;
+    }
+
+    /* Resume section */
+.section-title-2{
+    margin-top: 130px;
+    margin-bottom: 130px;
+    font-weight: 700;
+    font-size: 35px;
+    /* identical to box height */
+
+    text-align: center;
+
+    /* Dark 01 */
+
+    color: #181818;
+}
+.resume-content{
+    display: flex;
+    gap: 20px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.title{
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 34px;
+    margin-bottom: 10px;
+    /* identical to box height */
+
+
+    /* Dark 02 */
+
+    color: #474747;
+
+}
+.sub-title{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    margin-bottom: 20px;
+
+    /* Dark 03 */
+
+    color: #757575;
+}
+.description{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    /* or 175% */
+
+
+    /* Dark 03 */
+
+    color: #757575;
+}
+
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+/* contact style  */
+.contact .section-title{
+    text-align: left;
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background-color: #f1e6ddef;
+    padding: 130px 200px;
+}
+
+.contact input[type="text"],input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+
 }
